# DeBERTaV3-Japanese

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run.py  run.sh
config/: accelerate_config_zero2.yaml  accelerate_config_zero3.yaml  deberta-v3-base.yaml  deberta-v3-xsmall-debug.yaml  deberta-v3-xsmall.yaml  ds_config.json  sudachi.json
scripts/: __init__.py  download_dataset.py  pre_tokenize.py  train_model.py  train_tokenizer.py
src/: data.py  modeling_deberta_v3.py  utils.py
src/data/: __init__.py  download.py  filters.py  preprocess.py
src/models/: __init__.py  modeling_deberta_v3.py
