[tool.poetry]
name = "deberta-v3-japanese"
version = "0.1.0"
description = ""
authors = ["KengoShimizu <tealgreen0503@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
accelerate = "^0.23.0"
apache-beam = "^2.51.0"
datasets = "^2.14.5"
deepspeed = "^0.11.1"
pysbd = "^0.3.4"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
sentencepiece = "^0.1.99"
sudachidict-core = "^20230927"
sudachipy = "^0.6.7"
tensorflow = "^2.14.0"
tensorflow-datasets = "^4.9.3"
torch = {version = "^2.1.0+cu121", source = "torch-cu121"}
transformers = "^4.34.0"
wandb = "^0.15.12"


[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.0"
ruff = "^0.0.292"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']

[tool.ruff]
select = ["F", "E", "W", "C", "I", "N", "UP", "RUF"]
ignore = ["C901", "E501", "E741"]
fixable = ["ALL"]
line-length = 119
target-version = "py311"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_equality = true
