[tool.poetry]
name = "deberta-v3-japanese"
version = "0.1.0"
description = "Japanese DeBERTaV3"
authors = ["KengoShimizu <tealgreen0503@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "^0.27.2"
datasets = "^2.17.1"
deepspeed = "^0.13.2"
mwparserfromhell = "^0.6.6"
protobuf = "3.20.3"
pysbd = "^0.3.4"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
regex = "^2023.12.25"
sentencepiece = "^0.2.0"
sudachidict-core = "^20240109"
sudachipy = "^0.6.8"
torch = {version = "^2.2.1+cu121", source = "torch-cu121"}
transformers = "^4.38.1"
wandb = "^0.16.3"
zstandard = "^0.22.0"


[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.2"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py311"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["F", "E", "W", "C", "I", "N", "UP", "RUF"]
ignore = ["C901", "E501", "E741", "RUF001"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
split-on-trailing-comma=false

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
strict_equality = true
exclude = ["checkpoints"]
